# hh.ru

./: main.py  pyproject.toml
src/: utils.py  vacancies_api.py  vacancies_json.py  vacancy.py
test/: conftest.py  test_vacanciec_json.py  test_vacancies_api.py  test_vacancy.py  utils_tests.py
tests/: conftest.py  data_tests.json.py  test_vacancies_api.py  test_vacancies_json.py  test_vacancy.py  utils_tests.py
